# MistCircuitStats

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.dev.yml  docker-compose.yml  mist_connection.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-merge.yml  build-and-push.yml  close-linked-issues.yml  codeql.yml  quality-gates.yml
.specify/: feature.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: customer_response_wan_insights.md
docs/screenshots/: .gitkeep
specs/001-wan-insights-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-wan-insights-metrics/checklists/: cascade-review.md  requirements.md
specs/001-wan-insights-metrics/contracts/: GET_gateway_port_hourly.md  GET_site_application_health.md  GET_site_wan_link_health.md
specs/002-mistapi-sdk-unification/: plan.md  spec.md  tasks.md
specs/002-mistapi-sdk-unification/checklists/: requirements.md
templates/: index.html
