[project]
name = "mistcircuitstats"
version = "0.1.0"
description = "Circuit and WAN insights web dashboard for Juniper Mist"
requires-python = ">=3.13"

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [".specify", "docs", "specs", "templates"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# Project style uses f-string logging (G004) — allowed, so the G family is not selected.
# E402: module-import-not-at-top — intentional in app.py (env vars must load before mistapi import).
ignore = ["E402"]

[tool.black]
line-length = 120
target-version = ["py313"]
extend-exclude = "\\.specify|docs|specs|templates"

[tool.bandit]
exclude_dirs = [".github", ".specify", "docs", "specs", "templates"]

[tool.interrogate]
fail-under = 90
exclude = [".github", ".specify", "docs", "specs", "templates"]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-private = false
ignore-nested-classes = false
ignore-nested-functions = false
ignore-property-decorators = false
ignore-semiprivate = false
ignore-setters = false
verbose = 2

[tool.pydoclint]
style = "google"
exclude = '\.github|\.specify|docs|specs|templates'
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
check-return-types = false
check-yield-types = false
skip-checking-raises = true
check-arg-order = false
skip-checking-short-docstrings = true
allow-init-docstring = true
